--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
         </nav>
     </header>
 
+    <div class="intro-blurb section">
+        <p>Everyone has a story — an email sent to the wrong person, a text taken out of context, a work conflict that seems impossible to resolve. These digital miscommunications have become universal experiences in our connected world. Technology has transformed how we communicate, creating both opportunities and challenges in our personal and professional lives. My research at the intersection of communication and technology explores critical issues like cyberbullying, technology's role in relationships, and other online social dynamics, which allows me to help organizations and individuals translate this knowledge into practical strategies that improve digital interactions. Through speaking engagements, workshops, and consulting, I offer evidence-based approaches to the communication challenges we all face in our increasingly connected world.</p>
+    </div>
+
     <main>
         <section id="about" class="section grid-container">
             <div class="content-block">
                 <h2>ABOUT</h2>
                 <p>I am a professor, researcher, speaker, and facilitator. My research specialties focus on the intersection of communication and technology. I explore topics such as cyberbullying and the use of technology and social media in relationships. I have published numerous research articles and book chapters on these topics.</p>
                 <p>My public scholarship includes op-eds in the <em>Tacoma News Tribune</em> and <em>Austin American Statesman</em>, and I have been quoted in publications such as <em>The Atlantic</em>, <em>Vox</em>, and numerous others.</p>
-                <p>I am a Professor of Communication Studies at the University of Puget Sound in Tacoma, WA.</p>
+                <p>I am a <a href="https://www.pugetsound.edu/directory/nicholas-brody">Professor of Communication Studies</a> at the University of Puget Sound in Tacoma, WA.</p>
             </div>
             <div class="image-block">
                 <img src="Brody Headshot.jpeg" alt="Headshot of Nicholas Brody">
@@ -39,10 +43,9 @@
 
         <section id="services" class="section">
             <h2>SERVICES</h2>
-
-<p>Available in the Greater Tacoma/Puget Sound area for speaking engagements, workshops, and individual coaching. I regularly serve as an expert panelist and facilitator, helping organizations and individuals navigate the challenges of modern communication.<p>
-
-            <p>In particular, I am available as a speaker, workshop facilitator, and consultant for organizations or individuals interested in sessions on:</p>
+            <p>We are always communicating, yet achieving true understanding and connection remains a constant challenge. I regularly serve as an expert panelist and facilitator, helping organizations and individuals navigate the challenges of modern communication. I am available for speaking engagements, workshops, and individual coaching. <p>
+            <p>I appeared in the documentary <a href="https://www.impactful.co/upstanders"><i>The Upstanders</i></a>, and worked with Indieflix productions to deliver presentations and serve as an expert panelist for schools, hospitals, and community organizations who screened the documentary.</p>
+            <p>I can work with organizations to deliver panels, sessions, or trainings on:</p>
             <ul>
                 <li>Online Communication and Collaboration</li>
                 <li>Cyberbullying and Online Harassment</li>
@@ -90,17 +93,16 @@
 
         <section id="teaching" class="section">
             <h2>TEACHING</h2>
-            <p>I teach university courses on topics including Introduction to Online Communication, Communication Theory, Quantitative Research Methods, Communication and the Internet, Lying and Deception, Communication in Personal Relationships (Online and Off), and Controversies of Communication and Technology. My previous teaching experience includes courses in Language, Communication, and Culture; Communication in Organizations; Relational Communication; and Public Speaking.</p>
+            <p>I teach university courses on topics including Introduction to Online Communication, Communication Theory, Quantitative Research Methods, Communication and the Internet, Lying and Deception, Communication and Technology in Relationships, and Controversies of Communication and Technology. My previous teaching experience includes courses in Language, Communication, and Culture, Communication in Organizations, Relational Communication, and Public Speaking.</p>
         </section>
 
         <section id="contact" class="section contact-section">
             <h2>CONTACT</h2>
             <p>Nicholas Brody, Ph.D.</p>
-            <p>Professor, Department of Communication Studies</p>
-            <p>University of Puget Sound</p>
+            <p><a href="https://www.pugetsound.edu/directory/nicholas-brody">Professor, Department of Communication Studies</a></p> <p>University of Puget Sound</p>
             <p>Tacoma, WA</p>
             <p>Email: <a href="mailto:nbrody@gmail.com">nbrody@gmail.com</a></p>
-            <p>University Email: nbrody@pugetsound.edu</p>
+           <p>University Email: <a href="mailto:nbrody@pugetsound.edu">nbrody@pugetsound.edu</a></p>
             <p><a href="https://www.pugetsound.edu/sites/default/files/2025-01/Nicholas_Brody_CV_Jan_2025.pdf" target="_blank">View Full CV</a></p>
         </section>
     </main>
