--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
 
         <section id="services" class="section">
-            <h2>SERVICES</h2>
+            <h2>SERVICES: HELPING YOU SOLVE YOUR COMPLEX COMMUNICATION CHALLENGES</h2>
             <p>We are always communicating, yet achieving true understanding and connection remains a constant challenge. I regularly serve as an expert panelist and facilitator, helping organizations and individuals navigate the challenges of modern communication. I am available for speaking engagements, workshops, and individual coaching. <p>
             <p>I appeared in the documentary <a href="https://www.impactful.co/upstanders"><i>The Upstanders</i></a>, and worked with Indieflix productions to deliver presentations and serve as an expert panelist for schools, hospitals, and community organizations who screened the documentary.</p>
             <p>I can work with organizations to deliver panels, sessions, or trainings on:</p>
