--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dr. Nicholas Brody - Communication researcher, professor, and consultant specializing in digital communication, cyberbullying, and technology in relationships.">
     <title>Nicholas Brody, Ph.D.</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,7 @@
         </div>
         <nav class="header-nav">
             <a href="#about">ABOUT</a>
-            <a href="#services">SERVICES</a>
+            <a href="#consulting">CONSULTING</a>
             <a href="#research">RESEARCH</a>
             <a href="#teaching">TEACHING</a>
             <a href="#contact">CONTACT</a>
@@ -41,8 +42,9 @@
             </div>
         </section>
 
-        <section id="services" class="section">
-            <h2>SERVICES: HELPING YOU SOLVE YOUR COMPLEX COMMUNICATION CHALLENGES</h2>
+        <section id="consulting" class="section">
+            <h2>CONSULTING</h2>
+            <p>Expert guidance for modern communication challenges</p>
             <p>We are always communicating, yet achieving true understanding and connection remains a constant challenge. I regularly serve as an expert panelist and facilitator, helping organizations and individuals navigate the challenges of modern communication. I am available for speaking engagements, workshops, and individual coaching. <p>
             <p>I appeared in the documentary <a href="https://www.impactful.co/upstanders"><i>The Upstanders</i></a>, and worked with Indieflix productions to deliver presentations and serve as an expert panelist for schools, hospitals, and community organizations who screened the documentary.</p>
             <p>I can work with organizations to deliver panels, sessions, or trainings on:</p>
@@ -109,6 +111,7 @@
 
     <footer>
         <p>&copy; 2025 Nicholas Brody</p>
+        <p><a href="#" style="text-decoration: underline;">Back to Top</a></p>
     </footer>
 
 </body>
