--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                 <li>Online Communication and Collaboration</li>
                 <li>Cyberbullying and Online Harassment</li>
                 <li>Teen Technology Use and Healthy Social Media Habits</li>
+		<li>AI use in communication and teaching</li)
                 <li>Public Speaking and Public Speaking Anxiety</li>
                 <li>Effective Technology Use in Friendships and Relationships</li>
             </ul>
